

@startuml SystemCtrl's state chart

[*] --> SC_uninitialized

Idle --> Working : SetTemperature
Working --> Working : SetTemperatureResult
Working --> Idle : ShowTemperatureResult
Idle --> Idle : PowerOff
Idle --> Idle : PowerOffResult
Idle --> SC_uninitialized : TurnOffDisplayResult
SC_uninitialized --> SC_uninitialized : PowerOn
SC_uninitialized --> SC_uninitialized : PowerOnResult
SC_uninitialized --> Idle : ShowTemperatureResult

@enduml


       